# EosContracts

./: build  config.cmake  eosContracts.cmake
contracts/currency/: CMakeLists.txt  currency.cpp  currency.hpp  currency.wast  main.cpp
currency/: CMakeLists.txt  currency.cpp  currency.hpp  main.cpp
doc/: CurrencyTest.md  First.md  blog.md
eosc/: CMakeLists.txt  README.md  main.cpp
eosc/doc/html/: annotated.html  classes.html  classtokenika_1_1eosc_1_1_command_options.html  classtokenika_1_1eosc_1_1_command_options__inherit__graph.map  classtokenika_1_1eosc_1_1_command_options__inherit__graph.md5  classtokenika_1_1eosc_1_1_eosc_command.html  classtokenika_1_1eosc_1_1_eosc_command__inherit__graph.map  classtokenika_1_1eosc_1_1_eosc_command__inherit__graph.md5  classtokenika_1_1eosc_1_1_get_block.html  classtokenika_1_1eosc_1_1_get_block__coll__graph.md5  classtokenika_1_1eosc_1_1_get_block__inherit__graph.map  classtokenika_1_1eosc_1_1_get_block__inherit__graph.md5  classtokenika_1_1eosc_1_1_get_block_options.html  classtokenika_1_1eosc_1_1_get_block_options__coll__graph.map  classtokenika_1_1eosc_1_1_get_block_options__coll__graph.md5  classtokenika_1_1eosc_1_1_get_block_options__inherit__graph.md5  classtokenika_1_1eosc_1_1_get_info.html  classtokenika_1_1eosc_1_1_get_info__coll__graph.md5  classtokenika_1_1eosc_1_1_get_info__inherit__graph.map  classtokenika_1_1eosc_1_1_get_info__inherit__graph.md5  classtokenika_1_1eosc_1_1_get_info_options.html  classtokenika_1_1eosc_1_1_get_info_options__coll__graph.md5  classtokenika_1_1eosc_1_1_get_info_options__inherit__graph.map  classtokenika_1_1eosc_1_1_get_info_options__inherit__graph.md5  classtokenika_1_1eosc_1_1command__options-members.html  classtokenika_1_1eosc_1_1command__options.html  classtokenika_1_1eosc_1_1command__options__inherit__graph.dot  classtokenika_1_1eosc_1_1command__options__inherit__graph.md5  classtokenika_1_1eosc_1_1eosc__command-members.html  classtokenika_1_1eosc_1_1eosc__command.html  classtokenika_1_1eosc_1_1eosc__command__inherit__graph.dot  classtokenika_1_1eosc_1_1eosc__command__inherit__graph.md5  classtokenika_1_1eosc_1_1get__block-members.html  classtokenika_1_1eosc_1_1get__block.html  classtokenika_1_1eosc_1_1get__block__coll__graph.dot  classtokenika_1_1eosc_1_1get__block__coll__graph.md5  classtokenika_1_1eosc_1_1get__block__inherit__graph.dot  classtokenika_1_1eosc_1_1get__block__inherit__graph.md5  classtokenika_1_1eosc_1_1get__block__options-members.html  classtokenika_1_1eosc_1_1get__block__options.html  (+50 more)
eosc/doc/html/search/: all_1.js  all_2.js  all_7.js  classes_0.js  classes_2.js  classes_3.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js
eosc/doc/latex/: annotated.tex  classtokenika_1_1eosc_1_1_command_options.tex  classtokenika_1_1eosc_1_1_command_options__inherit__graph.md5  classtokenika_1_1eosc_1_1_eosc_command.tex  classtokenika_1_1eosc_1_1_eosc_command__inherit__graph.md5  classtokenika_1_1eosc_1_1_get_block.tex  classtokenika_1_1eosc_1_1_get_block__coll__graph.md5  classtokenika_1_1eosc_1_1_get_block__inherit__graph.md5  classtokenika_1_1eosc_1_1_get_block_options.tex  classtokenika_1_1eosc_1_1_get_block_options__coll__graph.md5  classtokenika_1_1eosc_1_1_get_block_options__inherit__graph.md5  classtokenika_1_1eosc_1_1_get_info.tex  classtokenika_1_1eosc_1_1_get_info__coll__graph.md5  classtokenika_1_1eosc_1_1_get_info__inherit__graph.md5  classtokenika_1_1eosc_1_1_get_info_options.tex  classtokenika_1_1eosc_1_1_get_info_options__coll__graph.md5  classtokenika_1_1eosc_1_1_get_info_options__inherit__graph.md5  classtokenika_1_1eosc_1_1command__options.tex  classtokenika_1_1eosc_1_1command__options.tex.tmp  classtokenika_1_1eosc_1_1command__options__inherit__graph.dot  classtokenika_1_1eosc_1_1command__options__inherit__graph.md5  classtokenika_1_1eosc_1_1eosc__command.tex  classtokenika_1_1eosc_1_1eosc__command__inherit__graph.dot  classtokenika_1_1eosc_1_1eosc__command__inherit__graph.md5  classtokenika_1_1eosc_1_1get__block.tex  classtokenika_1_1eosc_1_1get__block__coll__graph.dot  classtokenika_1_1eosc_1_1get__block__coll__graph.md5  classtokenika_1_1eosc_1_1get__block__inherit__graph.dot  classtokenika_1_1eosc_1_1get__block__inherit__graph.md5  classtokenika_1_1eosc_1_1get__block__options.tex  classtokenika_1_1eosc_1_1get__block__options__coll__graph.dot  classtokenika_1_1eosc_1_1get__block__options__coll__graph.md5  classtokenika_1_1eosc_1_1get__block__options__inherit__graph.dot  classtokenika_1_1eosc_1_1get__block__options__inherit__graph.md5  classtokenika_1_1eosc_1_1get__info.tex  classtokenika_1_1eosc_1_1get__info__coll__graph.dot  classtokenika_1_1eosc_1_1get__info__coll__graph.md5  classtokenika_1_1eosc_1_1get__info__inherit__graph.dot  classtokenika_1_1eosc_1_1get__info__inherit__graph.md5  classtokenika_1_1eosc_1_1get__info__options.tex  (+15 more)
eosc/eosc_commands/: CMakeLists.txt  eosc_command.cpp  eosc_command.hpp  eosc_commands.cpp  eosc_commands.hpp  eosc_get_commands.hpp
eosc/html/: graph_legend.html  index.html  md__r_e_a_d_m_e.html  pages.html
eosc/latex/: md__r_e_a_d_m_e.tex  refman.tex
eoscLib/: CMakeLists.txt  elements  main.cpp
eoscLib/eosContract/: CMakeLists.txt  contract.cpp  contract.hpp  contract.wast  truffle.hpp
eoscLib/eoslib_definitions/: CMakeLists.txt  db.cpp  message.cpp  print.cpp  system.cpp  transactions.cpp
pentagon/: CMakeLists.txt  main.cpp  pent_config.h.in
pentagon/eosc_commands/: CMakeLists.txt  eosc_commands.cpp  eosc_commands.hpp  eosc_get_commands.hpp
pentagon/pent_core/: CMakeLists.txt  pent_core.hpp  transactions.cpp
pentagon/pentagon1/: CMakeLists.txt  pentagon1.cpp  pentagon1.hpp  transactions.cpp
simplest/: CMakeLists.txt  logingTest.cpp  main.cpp
utils/: CMakeLists.txt  main.cpp
utils/transactions/: CMakeLists.txt  transactions.cpp  transactions.hpp
